Provider stars on mobile fix

--- a/themes/gv_sky/sass/_parts_provider/provider-overview-review.sass
+++ b/themes/gv_sky/sass/_parts_provider/provider-overview-review.sass
@@ -61,6 +61,10 @@
 
 			+m(480)
 				right: auto
+				left: 47px
+				width: 100%
+
+			+m(350)
 				left: 50px
 
 		&-caption
@@ -74,7 +78,10 @@
 
 			+m(480)
 				float: left
-				padding: 3px 10px 0 0
+				padding: 3px 7px 0 0
+			+m(350)
+				font-size: 14px
+				padding: 3px 8px 0 0
 
 		&-number
 			position: relative
@@ -95,6 +102,11 @@
 				font-family: avenir
 				margin-top: -3px
 				padding: 0 10px
+
+			+m(350)
+				font-size: 26px
+				padding: 0 7px
+				// margin-top: 0
 
 				
 		&-fivestar
